# gpuinfo-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
examples/: adreno_demo.rs  auto_detect_demo.rs  benchmark_cow.rs  cow_api_demo.rs  mode_demo.rs  my_example.rs  simple_demo.rs  strategy_comparison.rs  unsupported_demo.rs
src/: detect.rs  error.rs  info.rs  lib.rs
src/adreno/: database.rs  ioctl.rs  ioctl_detect.rs  ioctl_impl.rs  mod.rs  parser.rs  query.rs  strategy.rs
src/mali/: database.rs  mod.rs  parser.rs  query.rs
