[package]
name = "armgpuinfo"
version = "0.1.0"
edition = "2021"
authors = ["Devrim Development"]
description = "A unified, high-performance Rust library for querying ARM Mali and Qualcomm Adreno GPU hardware information via kernel ioctls on Linux/Android."
license = "MIT"
repository = "https://github.com/devrimdevelopment/armgpuinfo"
keywords = ["gpu", "arm", "mali", "adreno", "android", "linux", "embedded", "ioctl"]
categories = ["hardware-support", "embedded", "os"]
readme = "README.md"

[package.metadata.docs.rs]
targets = [
    "aarch64-unknown-linux-gnu",      # ARM64 Linux
    "armv7-unknown-linux-gnueabihf",  # ARMv7 Linux
    "aarch64-linux-android",          # ARM64 Android
    "armv7-linux-androideabi",        # ARMv7 Android
]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
default = ["mali", "adreno", "auto-detect"]
mali = ["dep:nix"]
adreno = ["dep:nix"]
auto-detect = []

strict = []

[dependencies]
nix = { version = "0.30.1", features = ["ioctl"], optional = true }

thiserror = "2.0.17"

libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"

# Conditional dev-dependencies für Platform-spezifische Tests
[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dev-dependencies]
# Nur auf ARM: Mock-Treiber für Tests
mockall = "0.12"

# Beispiele mit Feature-Requirements
[[example]]
name = "mode_demo"
path = "examples/mode_demo.rs"
required-features = ["mali"]

[[example]]
name = "adreno_demo"
path = "examples/adreno_demo.rs"
required-features = ["adreno"]

[[example]]
name = "auto_detect_demo"
path = "examples/auto_detect_demo.rs"
required-features = ["auto-detect"]

# Neues Beispiel: Strategie-Vergleich
[[example]]
name = "strategy_comparison"
path = "examples/strategy_comparison.rs"
required-features = ["mali", "adreno"]

[[example]]
name = "unsupported_demo"
path = "examples/unsupported_demo.rs"
required-features = ["auto-detect"]